# neos_client

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_client.py
