[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neos_client"
version = "0.0.1"
authors = [
  { name = "Muhammet Soyturk", email = "muhammetabdullahsoyturk@gmail.com" },
]
readme = "README.md"
description = "Python client for NEOS Server"
requires-python = ">=3.8"
license.file = "LICENSE"
keywords = ["Optimization", "NEOS"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
repository = "https://github.com/mabdullahsoyturk/neos_client"


[tool.mypy]
warn_unused_configs = true
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
